[gd_scene load_steps=2 format=3 uid="uid://73dcxvm8qmxy"]

[ext_resource type="Script" path="res://main.gd" id="1_eyw5i"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eyw5i")

[node name="ServerRequest" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 520.0
offset_right = 1149.0
offset_bottom = 652.0

[node name="ChatOutput" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UserInput" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SendButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
