extends Control

@onready var game_over_overlay = $GameOverOverlay # ê²Œì„ ì˜¤ë²„ í™”ë©´
@onready var retry_button = $GameOverOverlay/RetryButton # ì¬ì‹œì‘ ë²„íŠ¼
@onready var suspicion_bar = $SuspicionBar #ì˜ì‹¬ë„ ì§„ì²™
@onready var http_request = $ServerRequest
@onready var chat_output = $VBoxContainer/ChatOutput
@onready var user_input = $VBoxContainer/UserInput
@onready var send_button = $VBoxContainer/SendButton

const SERVER_URL = "http://127.0.0.1:8000/chat"
var current_suspicion = 0

func _ready():
	send_button.pressed.connect(_on_send_button_pressed)
	http_request.request_completed.connect(_on_request_completed)
	user_input.gui_input.connect(_on_user_input_gui_input)
	
	# â­ í•µì‹¬: ë§í¬(BBCode URL) í´ë¦­ ì‹ í˜¸ ì—°ê²°
	chat_output.meta_clicked.connect(_on_meta_clicked)
	
	add_chat_log("System", "ì„œë²„ ë¡œê·¸ì¸ ì™„ë£Œ.")
	retry_button.pressed.connect(_on_retry_button_pressed)

func _on_send_button_pressed():
	var text = user_input.text.strip_edges()
	if text == "": return
	
	add_chat_log("Player", text)
	user_input.text = ""
	user_input.editable = false
	send_button.disabled = true
	
	var data = {"player_input": text, "suspicion": 0}
	var headers = ["Content-Type: application/json"]
	http_request.request(SERVER_URL, headers, HTTPClient.METHOD_POST, JSON.stringify(data))

func _on_request_completed(result, response_code, _headers, body):
	if result == HTTPRequest.RESULT_SUCCESS and response_code == 200:
		var json = JSON.new()
		if json.parse(body.get_string_from_utf8()) == OK:
			var response_data = json.get_data()
			
			# 1. ëŒ€í™” ë‚´ìš© ê°€ì ¸ì˜¤ê¸°
			var npc_reply = response_data.get("dialogue", "...")
			
			# â­ [ì¶”ê°€ë¨] 2. ì˜ì‹¬ ìˆ˜ì¹˜ ë³€í™”ëŸ‰ ê°€ì ¸ì˜¤ê¸° (ê¸°ë³¸ê°’ 0)
			# JSONì— "suspicion_delta"ê°€ ìˆìœ¼ë©´ ê°€ì ¸ì˜¤ê³ , ì—†ìœ¼ë©´ 0ìœ¼ë¡œ ì²˜ë¦¬
			var delta = response_data.get("suspicion_delta", 0)
			update_suspicion(delta) # ì˜ì‹¬ ì—…ë°ì´íŠ¸ í•¨ìˆ˜ ì‹¤í–‰
			
			# 3. ë¡œê·¸ ì¶œë ¥
			add_chat_log("NPC", npc_reply)
	else:
		add_chat_log("System", "í†µì‹  ì˜¤ë¥˜ ë°œìƒ")
	
	# ì…ë ¥ ì ê¸ˆ í•´ì œ
	user_input.editable = true
	send_button.disabled = false
	user_input.grab_focus()

# â­ ì—…ê·¸ë ˆì´ë“œëœ íƒ€ìê¸° íš¨ê³¼ í•¨ìˆ˜
func add_chat_log(sender: String, message: String):
	var color = "white"
	if sender == "Player": color = "#569CD6"
	elif sender == "NPC": color = "#CE9178"
	elif sender == "System": color = "gray"
	
	# 1. ë¹„ë°€ë²ˆí˜¸ ê°ì§€ (bluesky2024)
	if "bluesky2024" in message:
		# í•´ë‹¹ ë‹¨ì–´ë¥¼ í´ë¦­ ê°€ëŠ¥í•œ íƒœê·¸[url]ë¡œ ê°ì‹¸ê¸°
		message = message.replace("bluesky2024", '[url={"type":"password", "value":"bluesky2024"}]bluesky2024[/url]')
	
	# 2. ì„œë²„ ê°ì§€ (ëŒ€ì†Œë¬¸ì ë¬´ì‹œë¥¼ ìœ„í•´ ê°„ë‹¨íˆ ì²˜ë¦¬)
	if "Server" in message or "ì„œë²„" in message:
		# "ì„œë²„"ë¼ëŠ” ë‹¨ì–´ê°€ ë‚˜ì˜¤ë©´ ë¬´ì¡°ê±´ Database Server ë…¸ë“œë¥¼ ë§Œë“œëŠ” ë§í¬ë¡œ ë³€í™˜
		message = message.replace("Server", '[url={"type":"server", "value":"Database Server"}]Server[/url]')
		message = message.replace("ì„œë²„", '[url={"type":"server", "value":"Database Server"}]ì„œë²„[/url]')
	
	# 2. í…ìŠ¤íŠ¸ ì¶”ê°€ (BBCode ì ìš©)
	chat_output.append_text("\n[color=%s]%s:[/color] %s" % [color, sender, message])
	
	# 3. íƒ€ìê¸° ì—°ì¶œ (visible_ratio ì‚¬ìš©)
	# í˜„ì¬ ì´ ê¸€ì ìˆ˜ ì €ì¥
	var total_chars = chat_output.get_parsed_text().length()
	chat_output.visible_characters = total_chars - message.length() # ë°©ê¸ˆ ì¶”ê°€í•œ ê¸€ìë§Œ ìˆ¨ê¹€
	
	# í•œ ê¸€ìì”© ë³´ì´ê²Œ í•˜ê¸°
	for i in range(message.length() + 1):
		chat_output.visible_characters += 1
		await get_tree().create_timer(0.03).timeout
	
	# ë‹¤ ì¹˜ë©´ ì „ì²´ ë‹¤ ë³´ì´ê¸° (ì•ˆì „ì¥ì¹˜)
	chat_output.visible_ratio = 1.0

func _on_user_input_gui_input(event):
	if event is InputEventKey and event.pressed and event.keycode == KEY_ENTER:
		if not event.shift_pressed:
			get_viewport().set_input_as_handled()
			_on_send_button_pressed()

# â­ ë§í¬ í´ë¦­ ì‹œ ì‹¤í–‰ë˜ëŠ” í•¨ìˆ˜
func _on_meta_clicked(meta):
	# metaì—ëŠ” ì•„ê¹Œ [url={...}] ì•ˆì— ë„£ì€ JSON ë°ì´í„°ê°€ ë“¤ì–´ì˜µë‹ˆë‹¤.
	var data = JSON.parse_string(meta)
	if data:
		print("ë‹¨ì„œ í´ë¦­ë¨! ì¢…ë¥˜: %s, ê°’: %s" % [data.type, data.value])
		
		# ì „í™”ì„ (Global)ì„ í†µí•´ ì „ ì„¸ê³„(ëª¨ë“  ìœˆë„ìš°)ì— ì•Œë¦½ë‹ˆë‹¤!
		Global.clue_found.emit(data.type, data.value)

func update_suspicion(delta):
	# ì˜ì‹¬ ìˆ˜ì¹˜ ë”í•˜ê¸°
	current_suspicion += delta
	
	# 0 ~ 100 ì‚¬ì´ë¥¼ ë²—ì–´ë‚˜ì§€ ì•Šê²Œ ê³ ì • (clamp)
	current_suspicion = clamp(current_suspicion, 0, 100)
	
	# UI ê²Œì´ì§€ ì—…ë°ì´íŠ¸
	if suspicion_bar:
		suspicion_bar.value = current_suspicion
		
	print("í˜„ì¬ ì˜ì‹¬ë„: ", current_suspicion, " (ë³€í™”ëŸ‰: ", delta, ")")
	
	# ê²Œì„ ì˜¤ë²„ ì²´í¬ (100 ì´ìƒì´ë©´)
	if current_suspicion >= 100:
		game_over()

func game_over():
	# 1. ì±„íŒ… ë¡œê·¸ì— ì‹œìŠ¤í…œ ë©”ì‹œì§€ ì¶œë ¥
	add_chat_log("System", "ğŸš¨ [CRITICAL] ë³´ì•ˆ í”„ë¡œí† ì½œ ìœ„ë°˜ ê°ì§€. ì ‘ì†ì„ ì°¨ë‹¨í•©ë‹ˆë‹¤.")
	
	# 2. ì¡°ì‘ ë¶ˆëŠ¥ ìƒíƒœ ë§Œë“¤ê¸°
	user_input.editable = false
	send_button.disabled = true
	
	# 3. ë¹¨ê°„ í™”ë©´ ë„ìš°ê¸° (ì—°ê·¹ ì‹œì‘!)
	game_over_overlay.visible = true
	
	# (ì„ íƒ ì‚¬í•­) ê¹œë¹¡ê±°ë¦¬ëŠ” íš¨ê³¼ ë“±ì„ ì£¼ë©´ ë” ë©‹ì§‘ë‹ˆë‹¤.

func _on_retry_button_pressed():
	# í˜„ì¬ ì”¬(Main)ì„ ì²˜ìŒë¶€í„° ë‹¤ì‹œ ë¡œë”© (ì™„ì „ ì´ˆê¸°í™”)
	get_tree().reload_current_scene()
